--- a/agendamento.html
+++ b/agendamento.html
@@ -20,7 +20,7 @@
         <div class="menu">
 
             <nav><h2>
-                <a href="index">INICIO</a>
+                <a href="index.html">INICIO</a>
                 <a href="agendamento.html">AGENDAMENTO</a>
                 <a href="sobre.html">SOBRE</a>
                 </h2></nav>
