--- a/agendamento.html
+++ b/agendamento.html
@@ -37,8 +37,8 @@
 justify-content: center;">
 
 <div class="mensagem-box1">
-  <p style="color: aliceblue;">VICTOR</p>
-  <a href="https://calendar.app.google/k65RgFTUh3craoY17"><img src="img/victorbg.png" ></a href>
+  <p style="color: aliceblue;">BARBEIRO 1</p>
+  <a href="LINK DA AGENDA"><img src="img/juniorbg.png" ></a href>
  
 </div>
 
